chore: vue-router 基础配置

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^17.0.36",
     "axios": "^0.27.2",
     "element-plus": "^2.2.2",
     "pinia": "^2.0.14",
